PRO-0: add 2024 spells
